# erabooru

./: .air.toml  .env.example  .gitignore  AGENTS.md  Caddyfile  Caddyfile.dev  Caddyfile.prod  Cargo.toml  Dockerfile  Makefile  README.md  doc.go  docker-compose.dev.yml  docker-compose.pull.yml  docker-compose.yml  explorer.dockerfile  go.mod  go.sum  sqlc.yaml
.github/workflows/: build.yml
cmd/healthcheck/: main.go
cmd/image_embed_worker/: Dockerfile  main.go
cmd/media_process_worker/: Dockerfile  main.go
cmd/media_worker/: Dockerfile  main.go
deploy/: quickstart.sh
design/: design.go  oapi-codegen.yaml
ent/: attribute.go  attribute_create.go  attribute_delete.go  attribute_query.go  attribute_update.go  client.go  date.go  date_create.go  date_delete.go  date_query.go  date_update.go  ent.go  hiddentagfilter.go  hiddentagfilter_create.go  hiddentagfilter_delete.go  hiddentagfilter_query.go  hiddentagfilter_update.go  media.go  media_create.go  media_delete.go  media_query.go  media_update.go  mediaattribute.go  mediaattribute_create.go  mediaattribute_delete.go  mediaattribute_query.go  mediaattribute_update.go  mediadate.go  mediadate_create.go  mediadate_delete.go  mediadate_query.go  mediadate_update.go  mediavector.go  mediavector_create.go  mediavector_delete.go  mediavector_query.go  mediavector_update.go  mutation.go  runtime.go  setting.go  (+15 more)
proto/: embed.proto
scripts/: dev.sh
src/: error.rs  main.rs  model.rs
tests/: quick_dev.rs
web/: AGENTS.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
(+144 files in other folders)
