[package]
name = "erabooru"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-server = "0.7.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
